tests/lean/423.lean.expected.out
423.lean:3:35-3:40: error: Application type mismatch: In the appplication
  HAdd.hAdd a
the final argument
  a
has type
  T : Sort u
but is expected to have type
  Nat : Type
423.lean:5:37-5:38: error: Application type mismatch: In the appplication
  Add T
the final argument
  T
has type
  Sort u : Type u
but is expected to have type
  Type ?u : Type (?u + 1)
423.lean:5:47-5:48: error: Application type mismatch: In the appplication
  OfNat T
the final argument
  T
has type
  Sort u : Type u
but is expected to have type
  Type ?u : Type (?u + 1)
423.lean:5:55-5:60: error: Application type mismatch: In the appplication
  HAdd.hAdd a
the final argument
  a
has type
  T : Sort u
but is expected to have type
  Nat : Type
